# chatterbox-vllm

./: .gitignore  README.md  benchmark-multilingual.py  benchmark.py  example-tts-min-vram.py  example-tts-multilingual.py  example-tts.py  gradio_tts_app.py  pyproject.toml  upload-package.sh
docs/: benchmark-text-fr-1.txt
src/chatterbox_vllm/: text_utils.py  tts.py
src/chatterbox_vllm/models/s3gen/: flow.py  s3gen.py
src/chatterbox_vllm/models/t3/: __init__.py  config.json  entokenizer.py  mtl_tokenizer.json  mtltokenizer.py  t3.py  t3_vllm.py  tokenizer.json
src/chatterbox_vllm/models/t3/inference/: t3_hf_backend.py
src/chatterbox_vllm/models/t3/modules/: cond_enc.py  perceiver.py  t3_config.py
t3-model/: config.json  model.safetensors
